--- a/AdsLib/src/main/res/layout/view_ad.xml
+++ b/AdsLib/src/main/res/layout/view_ad.xml
@@ -47,14 +47,33 @@
                 android:textColor="#000000"
                 android:fontFamily="@font/alfa"
                 />
-
-            <ImageView
-                android:id="@+id/adview_img"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:contentDescription="Ad image"
-                android:scaleType="centerCrop"
-                android:src="#D1C4E9" />
+                android:layout_height="400dp">
+
+                <ImageView
+                    android:id="@+id/adview_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="Ad image"
+                    android:scaleType="centerCrop"
+                    android:src="#D1C4E9" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <VideoView
+                        android:id="@+id/adview_video"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+                </LinearLayout>
+            </FrameLayout>
+
+
 
             <!-- CardView encapsulating both location and description -->
             <androidx.cardview.widget.CardView
