--- a/AdsLib/src/main/res/layout/view_ad.xml
+++ b/AdsLib/src/main/res/layout/view_ad.xml
@@ -5,14 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="12dp"
-    android:gravity="center"
     >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="24dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:paddingBottom="80dp"
         android:backgroundTint="#FFFFFF">
 
         <LinearLayout
@@ -31,7 +32,7 @@
                 android:backgroundTint="#64B5F6"
                 app:icon="@drawable/close"
                 android:scaleType="centerInside"
-                app:cornerRadius="35dp" />
+                app:cornerRadius="50dp" />
 
 
             <TextView
@@ -50,9 +51,10 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:backgroundTint="#B3E5FC"
                 android:layout_marginBottom="5dp"
-                app:cardCornerRadius="24dp">
+                app:cardCornerRadius="50dp">
 
 
 
@@ -61,14 +63,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Ad Location "
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textColor="#000000"
                         android:gravity="center_horizontal"
                         android:layout_marginTop="4dp" />
             </androidx.cardview.widget.CardView>
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="400dp">
+                android:layout_height="350dp">
 
                 <ImageView
                     android:id="@+id/adview_img"
@@ -80,14 +82,14 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <VideoView
                         android:id="@+id/adview_video"
                         android:layout_width="match_parent"
-                        android:layout_height="400dp"
+                        android:layout_height="350dp"
                         android:visibility="gone" />
                 </LinearLayout>
             </FrameLayout>
@@ -96,8 +98,9 @@
 
             <!-- CardView encapsulating both location and description -->
             <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:backgroundTint="#B3E5FC"
                 app:cardCornerRadius="24dp">
@@ -113,7 +116,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Ad description "
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:textColor="#000000"
                         android:gravity="center_horizontal"
                         android:layout_marginTop="4dp" />
@@ -125,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="5dp">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/adview_adLink"
